# pyscaffoldext-markdown

./: .cirrus.yml  .coveragerc  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  README.md  README.rst  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.md  index.rst  license.rst  requirements.txt
src/pyscaffoldext/markdown/: __init__.py  extension.py
src/pyscaffoldext/markdown/templates/: __init__.py  authors.template  auto_structify.template  contributing.template  index.template  myst_extensions.template  readme.template
tests/: conftest.py  helpers.py  test_custom_extension.py  test_markdown.py
